adaptions for new protocol definition.

--- a/Client/POI_07_WebSockets.html
+++ b/Client/POI_07_WebSockets.html
@@ -31,8 +31,9 @@
 <html lang="en">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<script type="text/javascript" src="openwebglobe_0.5.js"></script>
+<script type="text/javascript" src="openwebglobe_0.6.js"></script>
 <script type="text/javascript" src="rtposmodule.js"></script>
+<script type="text/javascript" src="wgs84_ch1903.js"></script>
 
 
 <script type="text/javascript">
