--- a/Client/index.html
+++ b/Client/index.html
@@ -4,10 +4,13 @@
 <link rel="stylesheet" type="text/css" href="design/styles.css">
 
 <!-- jQuery imports -->
- <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+<!--<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-  
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>-->
+            
+<link href="jquery/jquery-ui.css" rel="stylesheet" type="text/css"/>
+  <script src="jquery/jquery.min.js"></script>
+  <script src="jquery/jquery-ui.min.js"></script>
 
 
 <script type="text/javascript" src="openwebglobe_0.6.js"></script>
