--- a/Client/index.html
+++ b/Client/index.html
@@ -8,7 +8,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>-->
             
-<link href="jquery/jquery-ui.css" rel="stylesheet" type="text/css"/>
+<link href="jquery/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css"/>
   <script src="jquery/jquery.min.js"></script>
   <script src="jquery/jquery-ui.min.js"></script>
 
@@ -117,8 +117,9 @@ function main()
 	//set up panels
 	createViewPanel(document.getElementById('divViewOptions'));
 	createPointCloudPanel(document.getElementById('divPointCloudOptions'));
-	createRealTimePanel(document.getElementById('divRealTimeDataOptions'));
 	createRtPointCloudPanel(document.getElementById('divRealTimePcOptions'));
+	createRealTimePanel(document.getElementById('divRealTimeDataOptions'));
+	
 }
 
 
