--- a/Client/index.html
+++ b/Client/index.html
@@ -9,13 +9,13 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>-->
             
-<link href="jquery/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css"/>
+<link href="jquery/ui-darkness/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css"/>
 
   <script src="jquery/jquery.min.js"></script>
   <script src="jquery/jquery-ui.min.js"></script>
 
 
-<script type="text/javascript" src="openwebglobe_0.6.js"></script>
+<script type="text/javascript" src="openwebglobe_0.7.1.js"></script>
 <!--<script type="text/javascript" src="../../../WebViewerMainFork/WebViewer/external/closure-library/closure/goog/base.js"></script>
 <script type="text/javascript" src="../../../WebViewerMainFork/WebViewer/compiled/deps.js"></script>
 <script type="text/javascript">goog.require('owg.OpenWebGlobe');</script>-->
@@ -43,7 +43,7 @@ const const_pcfilerefreshinterval = 2000;
 
 
 //const const_wsaddress = 'ws://127.0.0.1:4123/consoleappsample';
-const const_wsaddress = 'ws://10.218.9.120:4123/consoleappsample';
+const const_wsaddress = 'ws://10.218.9.18:4123/consoleappsample';
 //const const_wsaddress = 'ws://10.10.5.130:4123/consoleappsample';
 
 const const_wsreconnectinterval = 10000;
